# gitsule

./: .gitignore  ARCHITECTURE.md  DATA_MODEL.md  DESIGN.md  FUTURE_ACTIONS.md  PRODUCT.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/app/routes/: CollectionsView.tsx  FavoritesView.tsx  HomeView.tsx  LibraryView.tsx  RepositoryDetailView.tsx  SettingsView.tsx
src/components/collection/: CollectionCard.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/repo/: DetailMetric.tsx  DiscoveryRow.tsx  MetaRow.tsx  RepoCard.tsx
src/components/status/: StatusBadge.tsx
src/components/ui/: DashboardPanel.tsx  EmptyState.tsx  PageHeader.tsx  StatCard.tsx
src/data/: mock.ts
src/data/db/: schema.sql
src/data/repositories/: repositoryStore.ts
src/types/: collection.ts  navigation.ts  repository.ts  status.ts  userPreferences.ts
src/utils/: dates.ts  filters.ts
