[package]
name = "gitsule"
version = "0.1.0"
description = "A capsule for GitHub discoveries."
authors = ["Gitsule"]
edition = "2021"

[lib]
name = "gitsule_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
